<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegistBookFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutMenu"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/vuelta_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/arrow_back_48dp"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/LayoutMenu"
            app:layout_constraintBottom_toBottomOf="@id/LayoutMenu"/>

        <ImageView
            android:id="@+id/eliminar_libro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:rotation="45"
            android:src="@drawable/add_48dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/LayoutMenu"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Texto Edicion -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/TVEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LayoutUsuario"
        android:text="@string/edicion_libros"
        android:textStyle="bold"
        android:textSize="32sp"
        />

    <!-- Input Titulo -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/LayoutContra"
        android:layout_margin="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TFTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titulo"
            android:layout_margin="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Autor -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/LayoutUsuario"
        app:layout_constraintBottom_toBottomOf="@id/LayoutContra"
        android:layout_margin="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TFAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_autor"
            android:layout_margin="16dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Año -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/LayoutUsuario"
        android:layout_margin="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TFAño"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_año"
            android:layout_margin="16dp"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Boton Registro -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:textColor="#ffffff"
        app:backgroundTint="#237A12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutContra" />

</androidx.constraintlayout.widget.ConstraintLayout>